# quring

./: .gitignore  .travis.yml  README.md  pyproject.toml  scratch.py
quring/core/: config.py  logger.py  paths.py
quring/gui/: actions.py  central.py  main.py  state_dialog.py  tape_widget.py
quring/gui/graphics/: scene.py  view.py
src/quring/: __init__.py  main.py
src/quring/controllers/: command.py  document.py
src/quring/model/: machine.py  state.py  tape.py  transition.py  types.py
src/quring/serialization/: __init__.py  serializer.py
tests/: test_commands.py  test_document.py  test_machine.py  test_serializer.py  test_tape.py
